--- a/frontend/src/styles/mainstage/mainstage.css
+++ b/frontend/src/styles/mainstage/mainstage.css
@@ -4,6 +4,6 @@
     .draggable {
         box-shadow: 0 0 10px #222831, 0 0 20px #222831, 0 0 40px #222831;
         backdrop-filter: saturate(180%) blur(5px);
-        background: rgba(59, 59, 59, 0.53) !important;
+        background: rgba(0, 0, 0, 0.6) !important;
     }
 }
